--- a/hariproject/test-output/index.html
+++ b/hariproject/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>E:\selenium\selenium_programs\hariproject\testngCucumber.xml</span>
+                    <span>C:\Users\vishnu vardhan reddy\git\hariproject\hariproject\testngCucumber.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -140,7 +140,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">E:\selenium\selenium_programs\hariproject\testngCucumber.xml</span>
+            <span class="header-content">C:\Users\vishnu vardhan reddy\git\hariproject\hariproject\testngCucumber.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -201,12 +201,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'com.mindtree.runner.testrunn')
-data.setCell(0, 3, 30137);
+data.setCell(0, 3, 16905);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 30 seconds</span>
+              <span class="suite-total-time">Total running time: 16 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -239,11 +239,11 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">runScenario("positive test for user login", "Optional[to test the login]")</span>
-                <span class="method-start">558 ms</span>
+                <span class="method-start">504 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">30830 ms</span>
+                <span class="method-start">17415 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
